--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Housing: Listings for Ithaca & Oswego</title>
+    <title>Housing: Listings for Ithaca</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-    <h1><%= link_to "Ithaca & Oswego Housing", root_path %></h1>
+    <h1><%= link_to "Ithaca Housing", root_path %></h1>
     <h2><i>For all your small town needs!</i></h2>
     <nav>
         <%= link_to "Add a Listing", new_listing_path %>
@@ -21,6 +21,6 @@
     </header>
     <%= yield %>
 
-    <footer><br>Copyright 2019 Ithaca & Oswego Housing</footer>
+    <footer><br>Copyright 2019 Ithaca Housing</footer>
   </body>
 </html>
